# Orbit

./: .gitignore  LICENSE  README.md
backend/: Dockerfile  orbit_client.py  pyproject.toml
backend/src/: di.py  main.py
backend/src/config/: app_config.py
backend/src/routers/: router.py
backend/src/routers/pojos/: registrations.py
backend/src/services/: registration.py
frontend/: Dockerfile  index.html  orbit-ecosystem-preset.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AppHeader.vue
frontend/src/services/: api.js
