[tool.poetry]
name = "orbit"
version = "1.0.0"
description = "Piattaforma per accedere a tutte le altre piattaforme"
authors = ["Giorgio Agosta <agogi.dev@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pyyaml = "^6.0.3"
dependency-injector = "^4.41.0"
tomli = "^2.4.0"
pydantic-settings = "^2.13.1"
pydantic = "^2.12.5"
greenlet = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"